--- a/templates/implementingOrganisations/implementing-organisation-view-detail.html
+++ b/templates/implementingOrganisations/implementing-organisation-view-detail.html
@@ -88,7 +88,7 @@
                         <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                         <h3>Projects per country</h3>
                         <hr>
-                        <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,recipient_country_percentage_weighted_incoming_fund"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue with-table">
                         <h3>Partner information</h3>
