--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -53,11 +53,11 @@
         <div class="panel lightblue clearfix no-padding-top no-margin-bottom">
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-3 chart">
-                    <oipa-pie-chart group-by="sector" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                    <oipa-pie-chart group-by="sector" aggregation-key="count" aggregations="count,sector_percentage_weighted_incoming_fund"></oipa-pie-chart>
                     <h4>Project distribution</h4>
                 </div>
                 <div class="col-sm-3 chart">
-                    <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund" aggregations="count,incoming_fund"></oipa-pie-chart>
+                    <oipa-pie-chart group-by="sector" aggregation-key="incoming_fund" aggregations="count,sector_percentage_weighted_incoming_fund"></oipa-pie-chart>
                     <h4>Budget distribution</h4>
                 </div>
             </div>
