--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -97,7 +97,7 @@
                         <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart> 
                         <h3>Projects per sector</h3>
                         <hr>
-                        <oipa-pie-chart group-by="sector" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>    
+                        <oipa-pie-chart group-by="sector" aggregation-key="count" aggregations="count,sector_percentage_weighted_incoming_fund"></oipa-pie-chart>    
                     </div>
                      <div class="panel lightblue">
                         <h3>More information</h3>
