--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -58,7 +58,7 @@
                                         Total sector expenditure
                                     </td>
                                     <td>
-                                        {{vm.disbursements | shortcurrency :'€'}}
+                                        {{vm.expenditure | shortcurrency :'€'}}
                                     </td>
                                 </tr>
                                 
@@ -91,7 +91,7 @@
                         <oipa-pie-chart group-by="related_activity" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
                         <h3>Projects per country</h3>
                         <hr>
-                        <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,incoming_fund"></oipa-pie-chart>
+                        <oipa-pie-chart group-by="recipient_country" aggregation-key="count" aggregations="count,recipient_country_percentage_weighted_incoming_fund"></oipa-pie-chart>
                     </div>
                     <div class="panel lightblue">
                         <h3>Related videos</h3>
