--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -570,7 +570,7 @@
                         <hr>
                         <div class="row" ng-if="vm.relatedImages.length != 0">
                             <div class="col-xs-6 col-sm-4 col-md-3 item" ng-repeat="img in vm.relatedImages">
-                                <a href="{{img.url}}"><img src="{{img.url}}" alt="{{img.title}}" title="{{img.title}}"></a>
+                                <a ng-href="{{img.url}}"><img ng-src="{{img.url}}" alt="{{img.title}}" title="{{img.title}}"></a>
                             </div>
                         </div>
                         <p ng-if="vm.relatedImages.length == 0">Data to be added</p>
