--- a/templates/_layout/navbar.html
+++ b/templates/_layout/navbar.html
@@ -3,7 +3,7 @@
     <div class="mobile-header hidden-md hidden-lg">
       <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2">
         <a ui-sref="home" title="Home" rel="home">
-          <img src="{{templateBaseUrl}}/images/logo-en-mobile.png" />
+          <img ng-src="{{templateBaseUrl}}/images/logo-en-mobile.png" />
         </a>
       </div>
     </div>
@@ -11,7 +11,7 @@
     <div class="row logo hidden-xs hidden-sm">
       <div class="col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
         <a ui-sref="home" title="Home" rel="home">
-          <img src="{{templateBaseUrl}}/images/logo-en-highres.png" />
+          <img ng-src="{{templateBaseUrl}}/images/logo-en-highres.png" />
         </a>
       </div>
     </div>
