--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -570,7 +570,7 @@
                         <hr>
                         <div class="row" ng-if="vm.relatedImages.length != 0">
                             <div class="col-xs-6 col-sm-4 col-md-3 item" ng-repeat="img in vm.relatedImages">
-                                <a ng-href="{{img.url}}"><img ng-src="{{img.url}}" alt="{{img.title}}" title="{{img.title}}"></a>
+                                <a href="{{img.url}}" target="_blank"><img ng-src="{{img.url}}" alt="{{img.title}}" title="{{img.title}}"></a>
                             </div>
                         </div>
                         <p ng-if="vm.relatedImages.length == 0">Data to be added</p>
@@ -582,7 +582,7 @@
                                 <thead>
                                     <tr>
                                         <th>Title</th>
-                                        <th>Categories</th>
+                                        <!-- <th>Categories</th> -->
                                         <th>Language</th>
                                         <th width="110">Type</th>
                                     </tr>
@@ -590,11 +590,11 @@
                                 <tbody>
                                     <tr ng-repeat="document in vm.relatedDocuments">
                                         <td>
-                                            <a href="{{document.url}}">{{document.title}}</a>
+                                            <a href="{{document.url}}" target="_blank">{{document.title}}</a>
                                         </td>
-                                        <td>
+                                        <!-- <td>
                                              <span ng-repeat='cat in document.categories'>{{cat.name}}{{$last ? '' : '; '}}</span>
-                                        </td>
+                                        </td> -->
                                         <td>
                                             {{document.language}}
                                         </td>
