--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -473,7 +473,10 @@
                     <table class="no-format">
                         <tr>
                             <td>
-                                <nvd3 options="vm.transactionChartOptions" data="vm.transactionChartData" class="with-3d-shadow with-transitions"></nvd3>
+                                <nvd3 
+                                    options="vm.transactionChartOptions" 
+                                    data="vm.transactionChartData" 
+                                    class="with-3d-shadow with-transitions"></nvd3>
                             </td>
                         </tr>
                     </table>
