--- a/templates/implementingOrganisations/implementing-organisations-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-list.html
@@ -1,4 +1,4 @@
-<div class="container list-view-wrapper">
+<div class="list-view-wrapper">
     <div class="row">
         <div class="col-md-12">
             <div class="sort">
@@ -15,6 +15,11 @@
                     </select>
                 </div>
                 <span class="results">Results: <span class="total">{{vm.totalOrganisations}}</span></span>
+                <span class="download-list">
+                  <a ng-click="vm.download('json')"><i class="fa fa-download"></i>JSON</a>
+                  &nbsp;&nbsp;&nbsp;
+                  <a ng-click="vm.download('csv')"><i class="fa fa-download"></i>CSV</a>
+                </span>
             </div>
         </div>
     </div>
