--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -32,7 +32,7 @@
 
     </div>
 
-    <div class="content-offset" ng-show="vm.selectedTab == 'samenvatting'">
+    <div class="content-offset" ng-show="vm.selectedTab == 'summary'">
 
         <div class="container extra detailview">
 
