--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -31,7 +31,7 @@
         </sub-navbar>
     </div>
 
-    <div class="content-offset" ng-show="vm.selectedTab == 'samenvatting'">
+    <div class="content-offset" ng-show="vm.selectedTab == 'summary'">
 
         <div class="container detailview extra">
 
