--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -99,7 +99,11 @@
                         <table class="no-format">
                             <tr>
                                 <td width="130">Download:</td>
-                                <td><a ng-click="vm.download('json')"><i class="fa fa-download"></i>JSON</a></td>
+                                <td>
+                                    <a ng-click="vm.download('json')"><i class="fa fa-download"></i>JSON</a>
+                                    &nbsp;&nbsp;
+                                    <a ng-click="vm.download('csv')"><i class="fa fa-download"></i>CSV</a>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Share:</td>
