country/sector/partner header bold

--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -19,8 +19,9 @@
 
     <div class="container extra">
         
-        <div class="white no-margin-bottom">
-            <span class="flag-icon flag-icon-{{vm.country.code | lowercase }} big"></span><h1 class="title no-margin-bottom">{{vm.country.name}}</h1>
+        <div class="detailview white no-margin-bottom">
+            <span class="flag-icon flag-icon-{{vm.country.code | lowercase }} big"></span>
+            <h1 class="title no-margin-bottom">{{vm.country.name}}</h1>
         </div>
 
         <hr class="darkblue no-margin-bottom">
