--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -19,7 +19,7 @@
 
     <div class="container extra">
 
-        <div class="white no-margin-bottom">
+        <div class="detailview white no-margin-bottom">
             <h1 class="no-margin-bottom">{{vm.sector.name}}</h1>
         </div>
 
