--- a/templates/programmes/programme-view-detail.html
+++ b/templates/programmes/programme-view-detail.html
@@ -55,7 +55,7 @@
                                         Total programme budget
                                     </td>
                                     <td>
-                                        {{vm.activity.aggregations.activity_children.incoming_funds_value | shortcurrency :'€'}}
+                                        {{vm.activity.aggregations.children.incoming_funds_value | shortcurrency :'€'}}
                                     </td>
                                 </tr>
                                 <tr>
