--- a/templates/filters/filter-panel-programmes.html
+++ b/templates/filters/filter-panel-programmes.html
@@ -1,46 +1,48 @@
 <div class="filter-panel">
-    <div class="extra-padding">
-        <div class="row" ng-show="vm.programmes.length == 0">
-            <div class="svg-loader">
-                <img ng-src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
+    <div class="container">
+        <div class="extra-padding">
+            <div class="row" ng-show="vm.programmes.length == 0">
+                <div class="svg-loader">
+                    <img ng-src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
+                </div>
             </div>
-        </div>
-        <div class="row" ng-show="vm.programmes.length != 0">
-            <div class="col-md-12">
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <td class="th-first">Select one or more programmes</td>
-                            <td>Projects</td>
-                        </tr>
-                    </thead>
-                    <tbody>
+            <div class="row" ng-show="vm.programmes.length != 0">
+                <div class="col-md-12">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <td class="th-first">Select one or more programmes</td>
+                                <td>Projects</td>
+                            </tr>
+                        </thead>
+                        <tbody>
 
-                        <tr 
-                            dir-paginate="item in vm.programmes_list | itemsPerPage: 4"  
-                            total-items="vm.totalCount"
-                            pagination-id="programmes">
-                            <td>
-                                <div class="checkbox">
-                                    <label class="switch">
-                                        <input type="checkbox" checklist-model="vm.selectedProgrammes" checklist-value="item"><i></i>
-                                        <span>{{ item.name }}</span>
-                                    </label>
-                                </div>
-                            </td>
-                            <td>
-                                {{ item.count }}
-                            </td>
-                        </tr>
+                            <tr 
+                                dir-paginate="item in vm.programmes_list | itemsPerPage: 4"  
+                                total-items="vm.totalCount"
+                                pagination-id="programmes">
+                                <td>
+                                    <div class="checkbox">
+                                        <label class="switch">
+                                            <input type="checkbox" checklist-model="vm.selectedProgrammes" checklist-value="item"><i></i>
+                                            <span>{{ item.name }}</span>
+                                        </label>
+                                    </div>
+                                </td>
+                                <td>
+                                    {{ item.count }}
+                                </td>
+                            </tr>
 
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-12 text-center">
-                <button class="btn btn-default btn-save btn-openaid" ng-click="vm.save()">Save</button>
-                <dir-pagination-controls 
-                    pagination-id="programmes" 
-                    on-page-change="vm.pageChanged(newPageNumber)"></dir-pagination-controls>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-12 text-center">
+                    <button class="btn btn-default btn-save btn-openaid" ng-click="vm.save()">Save</button>
+                    <dir-pagination-controls 
+                        pagination-id="programmes" 
+                        on-page-change="vm.pageChanged(newPageNumber)"></dir-pagination-controls>
+                </div>
             </div>
         </div>
     </div>
