--- a/templates/programmes/programmes-list.html
+++ b/templates/programmes/programmes-list.html
@@ -61,7 +61,7 @@
     <tbody>
         <tr
             ng-repeat="item in vm.activities">
-            <td><a ui-sref="programme({ programme_id: item.activity_id })">{{ item.name }}</a></td>
+            <td><a ui-sref="programme({ programme_id: item.activity_id, tab: 'summary' })">{{ item.name }}</a></td>
             <td>{{item.count ? item.count : '0'}} projects</td>
             <!-- <td>XX countries</td> -->
             <!-- <td>XX sectors</td> -->
