--- a/templates/sectors/sector-nested-item.html
+++ b/templates/sectors/sector-nested-item.html
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <h3 class="no-margin">
-                            <a ui-sref="sector({ sector_id: item.sector_id })">{{ item.name }}</a>
+                            <a ui-sref="sector({ sector_id: item.sector_id, tab: 'summary' })">{{ item.name }}</a>
                         </h3>
                     </div>
                     <div class="col-sm-3">
