--- a/templates/activities/activity-view-detail.html
+++ b/templates/activities/activity-view-detail.html
@@ -17,7 +17,11 @@
 
         <div class="detailview white no-margin-bottom no-padding-bottom">
 
-            <h1 class="no-margin-bottom"><span ng-repeat="recipient_country in vm.activity.recipient_countries" class="flag-icon flag-icon-{{recipient_country.country.code | lowercase }} detail-flag"></span>{{vm.activity.title.narratives[0].text}}</h1>         
+            <div ng-repeat="recipient_country in vm.activity.recipient_countries"  style="display:inline-block;margin: 10px 10px 0 0;">
+                <h4><span class="flag-icon flag-icon-{{recipient_country.country.code | lowercase }} detail-flag"></span>
+                {{recipient_country.country.name}}</h4>
+            </div>
+            <h1 style="margin-top:0" class="no-margin-bottom">{{vm.activity.title.narratives[0].text}}</h1>         
         </div>
 
         <hr class="darkblue no-margin-bottom">
@@ -123,17 +127,17 @@
                             </tr>
                             <tr class="panel lightblue">
                                 <td>Country:</td>
-                                <td><a ng-repeat="recipient_country in vm.activity.recipient_countries" ui-sref="country({ country_id: recipient_country.country.code })">{{recipient_country.country.name}}{{$last ? '' : ', '}}</a><span ng-if='vm.activity.recipient_countries.length == 0'>Data to be added</span> </td>
+                                <td><a ng-repeat="recipient_country in vm.activity.recipient_countries" ui-sref="country({ country_id: recipient_country.country.code, tab: 'summary' })">{{recipient_country.country.name}}{{$last ? '' : ', '}}</a><span ng-if='vm.activity.recipient_countries.length == 0'>Data to be added</span> </td>
                             </tr>
                             <tr>
                                 <td width="130">Sectors: </td>
-                                <td><a ui-sref="sector({ sector_id: vm.activity.sectors[0].sector.code })">
+                                <td><a ui-sref="sector({ sector_id: vm.activity.sectors[0].sector.code, tab: 'summary' })">
                                     {{vm.activity.sectors[0].sector.name}}
                                 </a><span ng-show='!vm.activity.sectors.length'>Data to be added</span></td>
                             </tr>
                             <tr>
                                 <td>Programme:</td>
-                                <td><a ui-sref="programme({ programme_id: vm.activity.related_activities[0].ref })">
+                                <td><a ui-sref="programme({ programme_id: vm.activity.related_activities[0].ref, tab: 'summary' })">
                                     {{vm.activity.related_activities[0].name}}
                                 </a><span ng-if="!vm.activity.related_activities[0].ref">Data to be added</span></td>
                             </tr>
@@ -156,7 +160,7 @@
                             <tr>
                                 <td>Funding partners:</td>
                                 <td>
-                                    <a class="show-me" ng-if="org.role.code == 1" ui-sref="organisation({ organisation_id: org.narratives[0].text })" ng-repeat='org in vm.activity.participating_organisations'>
+                                    <a class="show-me" ng-if="org.role.code == 1" ui-sref="organisation({ organisation_id: org.narratives[0].text, tab: 'summary' })" ng-repeat='org in vm.activity.participating_organisations'>
                                     {{org.narratives[0].text}}{{$last ? '' : ', '}}
                                     </a>
                                     <span class="hide-me">Data to be added</span></td>
@@ -164,7 +168,7 @@
                             <tr>
                                 <td>Project partners:</td>
                                 <td>
-                                    <a class="show-me" ng-if="org.role.code == 2 || org.role.code == 4" ui-sref="organisation({ organisation_id: org.narratives[0].text })" ng-repeat='org in vm.activity.participating_organisations'>
+                                    <a class="show-me" ng-if="org.role.code == 2 || org.role.code == 4" ui-sref="organisation({ organisation_id: org.narratives[0].text, tab: 'summary' })" ng-repeat='org in vm.activity.participating_organisations'>
                                     {{org.narratives[0].text}}{{$last ? '' : ', '}}
                                     </a>
                                     <span class="hide-me">Data to be added</span>
