--- a/templates/filters/filter-panel-activity-status.html
+++ b/templates/filters/filter-panel-activity-status.html
@@ -1,40 +1,40 @@
 <div class="filter-panel">
-	<div class="extra-padding">
-		<div class="row" ng-show="vm.activityStatuses.length == 0">
-			<div class="svg-loader">
-				<img ng-src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
+    <div class="container">
+		<div class="extra-padding">
+			<div class="row" ng-show="vm.activityStatuses.length == 0">
+				<div class="svg-loader">
+					<img ng-src="{{templateBaseUrl}}/images/spinning-circles.svg" width="70" alt="">
+				</div>
 			</div>
-		</div>
-		<div class="row" ng-show="vm.activityStatuses.length != 0">
-			<div class="col-md-12">
-				<table class="table">
-					<thead>
-						<tr>
-							<td class="th-first">Select one or more statuses</td>
-							<td>Projects</td>
-						</tr>
-					</thead>
-					<tbody>
-
-					    <tr dir-paginate="item in vm.activityStatuses | itemsPerPage: 4"  pagination-id="activityStatuses">
-					    	<td>
-					    		<div class="checkbox">
-						    		<label class="switch">
-						    			<input type="checkbox" checklist-model="vm.selectedActivityStatuses" checklist-value="item"><i></i>
-						    			<span>{{ item.activity_status.name }}</span>
-						    		</label>
-						    	</div>
-					    	</td>
-					    	<td>
-					    		{{ item.count }}
-					    	</td>
-					    </tr>
-
-					</tbody>
-				</table>
-			</div>
-			<div class="col-md-12 text-center">
-				<button class="btn btn-default btn-save btn-openaid" ng-click="vm.save()">Save</button>
+			<div class="row" ng-show="vm.activityStatuses.length != 0">
+				<div class="col-md-12">
+					<table class="table">
+						<thead>
+							<tr>
+								<td class="th-first">Select one or more statuses</td>
+								<td>Projects</td>
+							</tr>
+						</thead>
+						<tbody>
+						    <tr dir-paginate="item in vm.activityStatuses | itemsPerPage: 4"  pagination-id="activityStatuses">
+						    	<td>
+						    		<div class="checkbox">
+							    		<label class="switch">
+							    			<input type="checkbox" checklist-model="vm.selectedActivityStatuses" checklist-value="item"><i></i>
+							    			<span>{{ item.activity_status.name }}</span>
+							    		</label>
+							    	</div>
+						    	</td>
+						    	<td>
+						    		{{ item.count }}
+						    	</td>
+						    </tr>
+						</tbody>
+					</table>
+				</div>
+				<div class="col-md-12 text-center">
+					<button class="btn btn-default btn-save btn-openaid" ng-click="vm.save()">Save</button>
+				</div>
 			</div>
 		</div>
 	</div>
