--- a/templates/filters/filter-panel-search.html
+++ b/templates/filters/filter-panel-search.html
@@ -1,21 +1,20 @@
 <div class="filter-panel">
-<div class="extra-padding">
-    <div class="row filter-panel-header-wrapper">
-        <div class="col-md-6">
-            <div class="search-box keywords">
-                <form ng-submit="vm.submit()">
-                    <div class="form-group">
-                        <input ng-model="vm.query" class="form-control" placeholder="Enter your query...">
-                        <button class="btn-search" type="button" ng-click="vm.save()">
-                            <span class="fa fa-search"></span>
-                        </button>
+    <div class="container">
+        <div class="extra-padding">
+            <div class="row filter-panel-header-wrapper">
+                <div class="col-md-6">
+                    <div class="search-box keywords">
+                        <form ng-submit="vm.submit()">
+                            <div class="form-group">
+                                <input ng-model="vm.query" class="form-control" placeholder="Enter your query...">
+                                <button class="btn-search" type="button" ng-click="vm.save()">
+                                    <span class="fa fa-search"></span>
+                                </button>
+                            </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-
-<!--     <button class="btn btn-default btn-openaid btn-save" ng-click="vm.save()">Voeg trefwoord toe aan filters</button>
- -->
- </div>
  </div>
