--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -3,7 +3,7 @@
         <div class="col-xs-6">
             <div class="wrap">
                 <span class="expandme" ng-click="vm.toggleHideChildren($event)"></span>
-                <a ui-sref="sector({ sector_id: item.sector_id })">
+                <a ui-sref="sector({ sector_id: item.sector_id, tab: 'summary' })">
                     <span ng-if="item.name">{{ item.name }}</span>
                     <span ng-if="item.sector.name">{{ item.sector.name }}</span>
                 </a>
@@ -25,7 +25,7 @@
         <div class="col-xs-6">
             <div class="wrap">
                 <span class="expandme empty"></span>
-                <a ui-sref="sector({ sector_id: item.sector.code })">
+                <a ui-sref="sector({ sector_id: item.sector.code, tab: 'summary' })">
                     <span ng-if="item.name">{{ item.name }}</span>
                     <span ng-if="item.sector.name">{{ item.sector.name }}</span>
                 </a>
